# cronometro

./: .coverage  .gitignore  environment.yml  pyproject.toml
src/cronometro/: timer.py
src/stopwatch/: display.py  stopwatch.py
src/stopwatch/config/: paths.py
src/stopwatch/learning_versions/: 1.py
src/stopwatch/main/: run.py
src/stopwatch/user_input/: display.py  input.py  listener.py
tests/: test_display.py  test_timer.py
